[package]
name = "matter_hub"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = {version = "0.1", features = ["sync"] }
futures = "0.3"
sqlx = { version = "0.8.6", features = ["sqlite"] }
regex = "1.12.2"
